--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Setup
 # -----------------------------------------------------------------------------
-title: 'blanob's page'
+title: "blanob's page"
 url: https://blanob.github.io
 
 # -----------------------------------------------------------------------------
